# hybrid-search-lib

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/: basic_usage.py
hybrid_search/: __init__.py  chunker.py  core.py  fuzzy.py  index.py  ranker.py  result.py
src/hybrid_search/: __init__.py  bm25.py  core.py  embedder.py  index.py  pipeline.py
tests/: test_behavior_contract.py  test_bm25_index.py  test_chunker_representation.py  test_chunker_split.py  test_core_defaults.py  test_core_lifecycle.py  test_core_rebuild_helpers.py  test_core_recovery.py  test_document_add.py  test_document_delete.py  test_document_registry.py  test_document_update.py  test_embedder.py  test_embedding_customization.py  test_embedding_pipeline.py  test_examples.py  test_fuzzy_index.py  test_lifecycle_errors.py  test_package_import.py  test_public_api_contract.py  test_query_e2e.py  test_query_edge_cases.py  test_query_orchestration.py  test_ranker_fuse.py  test_ranker_normalize.py  test_ranker_rank.py  test_restart_lifecycle.py  test_restart_query.py  test_search_result.py  test_vector_index.py  test_vector_index_persistence.py
