[project]
name = "hybrid-search-lib"
version = "0.1.0"
description = "Local hybrid search over text documents."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "sentence-transformers>=5.5.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hybrid_search*"]
namespaces = false

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
